# copier-fastapi-template

./: .gitignore  copier.yml  pyproject.toml
project/{{project_name}}/: mkdocs.yml.tmpl  pyproject.toml.tmpl
project/{{project_name}}/scripts/cli/commands/: {% if use_command_startmodule %}startmodule.py{% endif %}
{{project_name}}/: .dockerignore  .gitignore  README.md.jinja  pyproject.toml.jinja
{{project_name}}/docs/: index.md  scripts.md
{{project_name}}/scripts/: constants.py
{{project_name}}/scripts/cli/commands/: generate_key.py  run.py
{{project_name}}/scripts/cli/tools/: color_string_builder.py
{{project_name}}/src/: main.py
{{project_name}}/src/config/: settings.py
{{project_name}}/src/database/: __init__.py  init_db.py  models.py
{{project_name}}/tests/: test_template_router.py
